Adapt to API change in AX_CODE_COVERAGE version 28
AX_CODE_COVERAGE recently changed the way it embedded its Makefile rules
in the output file: instead of using @CODE_COVERAGE_RULES@, users
are now meant to include aminclude_static.am.

The new AX_CODE_COVERAGE is only in the latest autoconf-archive release,
version 2019.01.06, which is inconveniently new, so bundle everything
we need for the moment.

This requires us to stop using the deprecated CODE_COVERAGE_LDFLAGS
(which we still used to support older versions of autoconf-archive)
and replace them with CODE_COVERAGE_LIBS.

Signed-off-by: Simon McVittie <smcv@collabora.com>
(cherry picked from commit 2938c2125ebcd001e470aeac1ffac45b6b1ebe89)
Closes: dbus#265

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.o
 *~
 /.ccache/
+/aminclude_static.am
 /build-aux/
 compile
 config.cache
@@ -39,6 +40,9 @@ config.h.in
 *.gcno
 tags
 /bus/tmpfiles.d/dbus.conf
+/dbus-1.*-coverage.info
+/dbus-1.*-coverage.info.tmp
+/dbus-1.*-coverage/
 /dbus-1.*/
 /dbus-1.*.tar.*
 /lcov.html/
