Consistently add CODE_COVERAGE_LIBS everywhere
We need to link the code coverage objects, directly or indirectly,
into every executable and every shared library. The rule I've followed
to make it clear that we do this, without too much repetition, is:
each executable, shared library or convenience library has
CODE_COVERAGE_LIBS in its LDADD or LIBADD, unless it is linked to a
convenience library in the same directory that has CODE_COVERAGE_LIBS
in *its* LIBADD.

Signed-off-by: Simon McVittie <smcv@collabora.com>

--- a/dbus/Makefile.am
+++ b/dbus/Makefile.am
@@ -282,7 +282,10 @@ else
 SYMBOL_EXPORT_LDFLAGS=
 endif
 
-libdbus_1_la_LIBADD= $(LIBDBUS_LIBS)
+libdbus_1_la_LIBADD = \
+	$(CODE_COVERAGE_LIBS) \
+	$(LIBDBUS_LIBS) \
+	$(NULL)
 libdbus_1_la_LDFLAGS = \
 	$(AM_LDFLAGS) \
 	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
@@ -290,7 +293,11 @@ libdbus_1_la_LDFLAGS = \
 	-no-undefined \
 	$(NULL)
 
-libdbus_internal_la_LIBADD=$(LIBDBUS_LIBS) libdbus-1.la
+libdbus_internal_la_LIBADD = \
+	$(CODE_COVERAGE_LIBS) \
+	$(LIBDBUS_LIBS) \
+	libdbus-1.la \
+	$(NULL)
 
 if DBUS_WIN
 AM_CXXFLAGS = \
