--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -5,7 +5,7 @@
 #---------------------------------------------------------------------------
 PROJECT_NAME           = D-Bus
 PROJECT_NUMBER         = @VERSION@
-OUTPUT_DIRECTORY       = doc/api
+OUTPUT_DIRECTORY       = @top_builddir@/doc/api
 OUTPUT_LANGUAGE        = English
 EXTRACT_ALL            = NO
 EXTRACT_PRIVATE        = NO
