--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(Doxygen)
 add_custom_target(doc ALL)
 
 if(DOXYGEN_EXECUTABLE)
-  OPTION(DBUS_ENABLE_DOXYGEN_DOCS "build DOXYGEN documentation (requires Doxygen)" ON)
+  option(DBUS_ENABLE_DOXYGEN_DOCS "build DOXYGEN documentation (requires Doxygen)" ON)
 endif(DOXYGEN_EXECUTABLE)
 
 if (DBUS_ENABLE_DOXYGEN_DOCS)
@@ -94,22 +94,22 @@ endmacro(DOCBOOK)
 ### copy tests to builddir so that generated tests and static tests 
 ### are all in one place.
 ### todo how to add more filetypes 
-MACRO (COPYDIR _src _type)
-    FOREACH(FILE_TYPE ${_type})
-        FOREACH(DIR ${_src})
-            FILE(GLOB FILES "${DIR}/${FILE_TYPE}" )
-            FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${DIR})
-            FOREACH(FILE ${FILES})
-                GET_FILENAME_COMPONENT(FILENAME ${FILE} NAME)
-                SET (TARGET ${CMAKE_BINARY_DIR}/${DIR}/${FILENAME})
+macro(COPYDIR _src _type)
+    foreach(FILE_TYPE ${_type})
+        foreach(DIR ${_src})
+            file(GLOB FILES "${DIR}/${FILE_TYPE}" )
+            file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${DIR})
+            foreach(FILE ${FILES})
+                get_filename_component(FILENAME ${FILE} NAME)
+                set(TARGET ${CMAKE_BINARY_DIR}/${DIR}/${FILENAME})
                 configure_file(${FILE} ${TARGET} COPYONLY)
-                IF (CONFIG_VERBOSE)
-                    MESSAGE("FROM: ${FILE}\nTO: ${TARGET}\n")
-                ENDIF (CONFIG_VERBOSE)
-            ENDFOREACH(FILE)
-        ENDFOREACH(DIR)
-    ENDFOREACH(FILE_TYPE)
-ENDMACRO (COPYDIR)
+                if(CONFIG_VERBOSE)
+                    message("FROM: ${FILE}\nTO: ${TARGET}\n")
+                endif(CONFIG_VERBOSE)
+            endforeach(FILE)
+        endforeach(DIR)
+    endforeach(FILE_TYPE)
+endmacro(COPYDIR)
 
 COPYDIR(doc *.png)
 COPYDIR(doc *.svg)
