--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -209,45 +209,45 @@ set (TESTDIRS
 )
 set (CONFIG_VERBOSE 1)
 
-FOREACH(DIR ${TESTDIRS})
-    FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${DIR})
-ENDFOREACH(DIR)
+foreach(DIR ${TESTDIRS})
+    file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/${DIR})
+endforeach(DIR)
 
 ### copy tests to builddir so that generated tests and static tests 
 ### are all in one place.
-MESSAGE(STATUS "Copying test files to test directory")
-FOREACH(FILE_TYPE *.message-raw *.auth-script *.sha1 *.txt *.conf *.service)
-    FOREACH(DIR ${TESTDIRS})
-        FILE(GLOB FILES "${DIR}/${FILE_TYPE}" )
-        FOREACH(FILE ${FILES})
-            GET_FILENAME_COMPONENT(FILENAME ${FILE} NAME)
-            SET (TARGET ${CMAKE_CURRENT_BINARY_DIR}/${DIR}/${FILENAME})
+message(STATUS "Copying test files to test directory")
+foreach(FILE_TYPE *.message-raw *.auth-script *.sha1 *.txt *.conf *.service)
+    foreach(DIR ${TESTDIRS})
+        file(GLOB FILES "${DIR}/${FILE_TYPE}" )
+        foreach(FILE ${FILES})
+            get_filename_component(FILENAME ${FILE} NAME)
+            set(TARGET ${CMAKE_CURRENT_BINARY_DIR}/${DIR}/${FILENAME})
             configure_file(${FILE} ${TARGET} COPYONLY)
-            IF (CONFIG_VERBOSE)
-                MESSAGE("${FILE}")
-            ENDIF (CONFIG_VERBOSE)
-        ENDFOREACH(FILE)
-    ENDFOREACH(DIR)
-ENDFOREACH(FILE_TYPE)
+            if(CONFIG_VERBOSE)
+                message("${FILE}")
+            endif(CONFIG_VERBOSE)
+        endforeach(FILE)
+    endforeach(DIR)
+endforeach(FILE_TYPE)
 
 ### generate test files
-MESSAGE(STATUS "Generating test files from templates into test directory")
+message(STATUS "Generating test files from templates into test directory")
 
-FOREACH(FILE_TYPE *.conf.in *.service.in)
-  FOREACH(DIR ${TESTDIRS})
-    FILE(GLOB FILES "${DIR}/${FILE_TYPE}" )
-    FOREACH(FILE ${FILES})
-      GET_FILENAME_COMPONENT(FILENAME ${FILE} NAME)
-      STRING(REGEX REPLACE "\\.in$" "" FILENAME ${FILENAME})
-      SET (TARGET ${CMAKE_CURRENT_BINARY_DIR}/${DIR}/${FILENAME})
+foreach(FILE_TYPE *.conf.in *.service.in)
+  foreach(DIR ${TESTDIRS})
+    file(GLOB FILES "${DIR}/${FILE_TYPE}" )
+    foreach(FILE ${FILES})
+      get_filename_component(FILENAME ${FILE} NAME)
+      string(REGEX REPLACE "\\.in$" "" FILENAME ${FILENAME})
+      set(TARGET ${CMAKE_CURRENT_BINARY_DIR}/${DIR}/${FILENAME})
       configure_file(${FILE} ${TARGET} @ONLY IMMEDIATE)
-      IF (CONFIG_VERBOSE)
-        MESSAGE("${FILE}")
-      ENDIF (CONFIG_VERBOSE)
-    ENDFOREACH(FILE)
-  ENDFOREACH(DIR)
-ENDFOREACH(FILE_TYPE)
+      if(CONFIG_VERBOSE)
+        message("${FILE}")
+      endif(CONFIG_VERBOSE)
+    endforeach(FILE)
+  endforeach(DIR)
+endforeach(FILE_TYPE)
 
-MESSAGE(STATUS "Copying generated bus config files to test directory")
+message(STATUS "Copying generated bus config files to test directory")
 configure_file(../bus/session.conf.in ${CMAKE_BINARY_DIR}/test/data/valid-config-files/session.conf @ONLY)
 configure_file(../bus/system.conf.in ${CMAKE_BINARY_DIR}/test/data/valid-config-files-system/system.conf @ONLY)
