--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -8,7 +8,7 @@ add_custom_target(doc ALL)
 
 if(DOXYGEN_EXECUTABLE)
   option(DBUS_ENABLE_DOXYGEN_DOCS "build DOXYGEN documentation (requires Doxygen)" ON)
-endif(DOXYGEN_EXECUTABLE)
+endif()
 
 if(DBUS_ENABLE_DOXYGEN_DOCS)
     set(top_srcdir ${CMAKE_SOURCE_DIR})
@@ -28,7 +28,7 @@ if(DBUS_ENABLE_DOXYGEN_DOCS)
     )
     add_dependencies(doc devhelp2)
     install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/api/html/ DESTINATION ${CMAKE_INSTALL_DATADIR}/doc/dbus/api)
-endif(DBUS_ENABLE_DOXYGEN_DOCS)
+endif()
 
 find_program(XSLTPROC_EXECUTABLE xsltproc)
 if(XSLTPROC_EXECUTABLE)
@@ -89,7 +89,7 @@ macro(DOCBOOK _sources _format)
     else()
         message(STATUS "skipping xml doc generating for ${_infile}, file not found")
     endif()
-endmacro(DOCBOOK)
+endmacro()
 
 ### copy tests to builddir so that generated tests and static tests 
 ### are all in one place.
@@ -105,11 +105,11 @@ macro(COPYDIR _src _type)
                 configure_file(${FILE} ${TARGET} COPYONLY)
                 if(CONFIG_VERBOSE)
                     message("FROM: ${FILE}\nTO: ${TARGET}\n")
-                endif(CONFIG_VERBOSE)
-            endforeach(FILE)
-        endforeach(DIR)
-    endforeach(FILE_TYPE)
-endmacro(COPYDIR)
+                endif()
+            endforeach()
+        endforeach()
+    endforeach()
+endmacro()
 
 COPYDIR(doc *.png)
 COPYDIR(doc *.svg)
